--- a/Tests/Resources/app/Resources/views/layout.html.twig
+++ b/Tests/Resources/app/Resources/views/layout.html.twig
@@ -4,7 +4,7 @@
     {% for javascript in cmf_tree_ui_javascripts() %}
         <script type="text/javascript" src="{{ asset(javascript) }}"></script>
     {% endfor %}
-    {% for stylesheet in cmf_tree_ui_javascripts() %}
+    {% for stylesheet in cmf_tree_ui_stylesheets() %}
         <link rel="stylesheet" href="{{ asset(stylesheet) }}"/>
     {% endfor %}
 </head>
