FancyTree basoca;;y works

--- a/Tests/Resources/app/Resources/views/layout.html.twig
+++ b/Tests/Resources/app/Resources/views/layout.html.twig
@@ -1,6 +1,8 @@
 <html>
 <head>
     <title>CMFTreeUiBundle Test Application</title>
+    <script type="text/javascript" src="{{ asset('bundles/cmftreeui/components/jquery/jquery.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('bundles/cmftreeui/components/jquery-ui/ui/jquery-ui.js') }}"></script>
     {% for javascript in cmf_tree_ui_javascripts() %}
         <script type="text/javascript" src="{{ asset(javascript) }}"></script>
     {% endfor %}
