--- a/Tests/Resources/app/Resources/views/index.html.twig
+++ b/Tests/Resources/app/Resources/views/index.html.twig
@@ -1,7 +1,7 @@
 {% extends "::layout.html.twig" %}
 {% block content %}
-<h2>Implementations</h2>
+<h2>Tree View Implementations (using PHPCR-ODM)</h2>
 <ul>
-    <li><a href="{{ path('test_phpcr_odm_tree') }}">PHPCR-ODM Tree</a></li>
+    <li><a href="{{ path('test_phpcr_odm_tree') }}">Fancy Tree</a>: https://github.com/mar10/fancytree</li>
 </ul>
 {% endblock %}
