--- a/Resources/views/FancyTree/view.html.twig
+++ b/Resources/views/FancyTree/view.html.twig
@@ -6,8 +6,19 @@ $(document).ready(function () {
         source: {
             url: "{{ path('_cmf_tree_ui_children', {'tree_name': tree.name}) }}"
         },
-        checkbox: false,
-        selectMode: 3,
+        init: function () {
+            {% if keyPath %}
+                var tree = $('#cmf_tree_{{ uniqId }}').fancytree('getTree');
+                tree.loadKeyPath('{{ keyPath|raw }}', function (node, state) {
+                    if(state == "loaded") {
+                    } else if (state == "ok") {
+                        node.setActive(true);
+                    }
+                });
+
+                return false;
+            {% endif %}
+        },
         lazyload: function (e, data) {
             var childrenUrl = data.node.data.children_url;
             data.result = $.ajax({
@@ -15,16 +26,10 @@ $(document).ready(function () {
                 dataType: "json"
             });
         },
+        keyPathSeparator: "&"
     };
 
     $('#cmf_tree_{{ uniqId }}').fancytree(options);
-    var tree = $('#cmf_tree_{{ uniqId }}').fancytree('getTree');
-
-    {% if options.select_node != '/' %}
-        tree.loadKeyPath('/{{ options.select_node }}', function (e, status) {
-            console.log(status);
-        });
-    {% endif %}
 
 });
 
