--- a/Tests/Resources/app/Resources/views/index.html.twig
+++ b/Tests/Resources/app/Resources/views/index.html.twig
@@ -1,6 +1,6 @@
 {% extends "::layout.html.twig" %}
 {% block content %}
-<h2>Tree View Implementations (using PHPCR-ODM)</h2>
+<h2>Tree View Implementations</h2>
 <ul>
     {% for tree in trees %}
     <li>
