--- a/Tests/Resources/app/Resources/views/layout.html.twig
+++ b/Tests/Resources/app/Resources/views/layout.html.twig
@@ -1,10 +1,13 @@
 <html>
 <head>
     <title>CMFTreeUiBundle Test Application</title>
+    
     <script type="text/javascript" src="{{ asset('bundles/cmftreeui/components/jquery/jquery.min.js') }}"></script>
     <script type="text/javascript" src="{{ asset('bundles/cmftreeui/components/jquery-ui/ui/jquery-ui.js') }}"></script>
     {% for javascript in cmf_tree_ui_javascripts() %}
-    <script type="text/javascript" src="{{ asset(javascript) }}?asd"></script>
+        <script type="text/javascript" src="{{ asset(javascript) }}?asd"></script>
+
+    <link rel="stylesheet" type="text/css" media="screen" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.14/themes/smoothness/jquery-ui.css" />
     {% endfor %}
     {% for stylesheet in cmf_tree_ui_stylesheets() %}
         <link rel="stylesheet" href="{{ asset(stylesheet) }}"/>
